--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Agrinho 2024</title>
-    <link rel="stylesheet" href="style.css">"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Como a agricultura do campo influencia na cidade</h1>
+        <h1>A Interdependência entre Campo e Cidade: Benefícios da Agricultura Rural para as Áreas Urbanas</h1>
     </header>
 
+    <div class="container-reverse">
+        <img src="" alt="">
+    </div>
+
+    <p>A relação entre o campo e a cidade é essencial para o equilíbrio e o desenvolvimento sustentável da sociedade. A agricultura no campo desempenha um papel fundamental ao apoiar a vida urbana de várias maneiras. Como por exemplo:</p>
+    
+    <h2>Abastecimento de Alimentos</h2>
+    <p>Frutas, legumes, grãos, carnes e produtos lácteos cultivados no campo são essenciais para manter uma dieta equilibrada nas cidades. Mercados locais, feiras de agricultores e redes de distribuição de alimentos dependem fortemente da produção agrícola rural para abastecer as prateleiras dos supermercados e os restaurantes nas áreas urbanas.</p>
+
+    <h2>Segurança Alimentar e Resiliência</h2>
+    <p>Ter uma fonte de alimentos local e confiável é vital para a segurança alimentar das cidades. A agricultura rural garante que, mesmo em tempos de crise, como desastres naturais ou interrupções no comércio global, haja um fornecimento contínuo de alimentos. Isso reduz a dependência de importações e aumenta a resiliência das comunidades urbanas frente a desafios imprevistos.</p>
+
+    <h2>Educação e Conscientização</h2>
+    <p>A agricultura rural também desempenha um papel educativo importante. Programas que conectam escolas urbanas com fazendas, visitas a campos agrícolas e feiras de agricultores ajudam a aumentar a conscientização sobre a origem dos alimentos e a importância da agricultura sustentável. Essa educação fortalece a conexão entre moradores urbanos e rurais, promovendo um entendimento e um respeito mútuo.</p>
+
+    <p>A agricultura no campo é indispensável para a vida nas cidades. Ela fornece alimentos, impulsiona a economia, assegura a segurança alimentar, contribui para a sustentabilidade ambiental e promove a educação e a cultura. O apoio mútuo entre áreas urbanas e rurais é essencial para construir uma sociedade equilibrada e sustentável. Ao valorizar e investir na agricultura rural, garantimos um futuro próspero e resiliente tanto para o campo quanto para a cidade.</p>
 </body>
 </html>
