--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <div class="container-reverse">
-        <img src="imagens/imagem.agrinho.png">
+        <img src="imagens/agrinho.png">
     </div>
 
     <p>A relação entre o campo e a cidade é essencial para o equilíbrio e o desenvolvimento sustentável da sociedade. A agricultura no campo desempenha um papel fundamental ao apoiar a vida urbana de várias maneiras. Como por exemplo:</p>
