--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
     <div class="container-reverse">
         <img src="imagens/agrinho.png">
-    </div>
-
-    <p>A relação entre o campo e a cidade é essencial para o equilíbrio e o desenvolvimento sustentável da sociedade. A agricultura no campo desempenha um papel fundamental ao apoiar a vida urbana de várias maneiras. Como por exemplo:</p>
+        <div class="texto">
+            <p>A relação entre o campo e a cidade é essencial para o equilíbrio e o desenvolvimento sustentável da sociedade. A agricultura no campo desempenha um papel fundamental ao apoiar a vida urbana de várias maneiras. Como por exemplo:</p>
     
     <h2>Abastecimento de Alimentos</h2>
     <p>Frutas, legumes, grãos, carnes e produtos lácteos cultivados no campo são essenciais para manter uma dieta equilibrada nas cidades. Mercados locais, feiras de agricultores e redes de distribuição de alimentos dependem fortemente da produção agrícola rural para abastecer as prateleiras dos supermercados e os restaurantes nas áreas urbanas.</p>
+        </div>
+    </div>
 
     <h2>Segurança Alimentar e Resiliência</h2>
     <p>Ter uma fonte de alimentos local e confiável é vital para a segurança alimentar das cidades. A agricultura rural garante que, mesmo em tempos de crise, como desastres naturais ou interrupções no comércio global, haja um fornecimento contínuo de alimentos. Isso reduz a dependência de importações e aumenta a resiliência das comunidades urbanas frente a desafios imprevistos.</p>
