--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <h2>Educação e Conscientização</h2>
     <p>A agricultura rural também desempenha um papel educativo importante. Programas que conectam escolas urbanas com fazendas, visitas a campos agrícolas e feiras de agricultores ajudam a aumentar a conscientização sobre a origem dos alimentos e a importância da agricultura sustentável. Essa educação fortalece a conexão entre moradores urbanos e rurais, promovendo um entendimento e um respeito mútuo.</p>
 
-    <p>A agricultura no campo é indispensável para a vida nas cidades. Ela fornece alimentos, impulsiona a economia, assegura a segurança alimentar, contribui para a sustentabilidade ambiental e promove a educação e a cultura. O apoio mútuo entre áreas urbanas e rurais é essencial para construir uma sociedade equilibrada e sustentável. Ao valorizar e investir na agricultura rural, garantimos um futuro próspero e resiliente tanto para o campo quanto para a cidade.</p>
+    <div class="container">
+        <img src="imagens/agrinho2.png">
+        <div class="texto">
+         <p>A agricultura no campo é indispensável para a vida nas cidades. Ela fornece alimentos, impulsiona a economia, assegura a segurança alimentar, contribui para a sustentabilidade ambiental e promove a educação e a cultura. O apoio mútuo entre áreas urbanas e rurais é essencial para construir uma sociedade equilibrada e sustentável. Ao valorizar e investir na agricultura rural, garantimos um futuro próspero e resiliente tanto para o campo quanto para a cidade.</p>
+        </div>
+    </div>  
 </body>
 </html>
